// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header: Component should render correctly 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-start",
      "color": "#FFF",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "width": "100%",
    }
  }
>
  <div />
  <Component
    customStyles={
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
        "right": 0,
        "top": 6,
      }
    }
  >
    <Component />
  </Component>
</div>
`;

exports[`Header: Component should render with children and custom styles 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "#FFF",
      "color": "#FFF",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "width": "100%",
    }
  }
>
  <div />
  <Component
    customStyles={
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
        "right": 0,
        "top": 6,
      }
    }
  >
    icon
  </Component>
</div>
`;
